--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "start-nodemon": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
-    "cybersource-rest-client": "0.0.21",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "cybersource-rest-client": "0.0.22",
+    "debug": "~4.3.1",
+    "ejs": "~3.1.6",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "jwk-to-pem": "^2.0.0",
-    "morgan": "~1.9.0"
+    "jwk-to-pem": "^2.0.4",
+    "morgan": "~1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
